# clipjot

./: .env.example  .gitignore  CLAUDE.md  SPEC.md  STYLE_GUIDE.md  TODO.md  requirements.txt
backend/: API.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  admin.py  api.py  auth.py  cli.py  components.py  config.py  db.py  main.py  models.py  views.py
backend/examples/: .env.example  sync_watch.py
backend/scripts/: generate_test_bookmarks.py
backend/static/: manifest.json
backend/tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_cli.py  test_db.py  test_routes.py  test_views.py
clients/android/: README.md  TODO.md  gradle.properties  gradlew  local.properties  settings.gradle
clients/android/app/: build.gradle  proguard-rules.pro
clients/chrome-extension/: README.md  manifest.json
clients/chrome-extension/background/: service-worker.js
clients/chrome-extension/options/: options.css  options.html  options.js
clients/chrome-extension/popup/: popup.css  popup.html  popup.js
clients/ios/: README.md
clients/ios/ClipJot/: CLAUDE.md  ClipJot.entitlements  Info.plist  ShareExtension.entitlements  (+1 more)
docs/: APP_STORE_LAUNCH_GUIDE.md  SYNC_API_DESIGN.md
style_guide/: alerts.html  buttons.html  cards.html  colors.html  components.html  forms.html  icons.html  index.html  tags.html  typography.html
xfix/: .env.example  SPEC.md  api_client.py  config.py  enricher.py  fetcher.py  requirements.txt  state.py  xfix.py
xfix/tests/: conftest.py  test_api_client.py  test_enricher.py  test_fetcher.py  test_state.py
(+80 files in other folders)
